force-app/main/default/objects/PS_Input_Attr_Value_Desc__c/PS_Input_Attr_Value_Desc__c.object-meta.xml
<CustomObject>
    <label>PS Input Attr Value Desc</label>
    <nameField>
        <label>PS Input Attr Value Desc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Input Attr Value Desc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>