force-app/main/default/objects/PS_Input_Attr_Value_Desc__c/fields/PS_Input_Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>PS_Input_Field_Labels__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Input Field Labels</label>
    <referenceTo>PS_Input_Field_Labels__c</referenceTo>
    <relationshipLabel>PS Input Attr Value Desc</relationshipLabel>
    <relationshipName>PS_Input_Attr_Value_Desc</relationshipName>
    <type>Lookup</type>
</CustomField>