force-app/main/default/objects/PS_Input_Attr_Value_Desc__c/fields/Text_Description_of_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Description_of_Attribute_Value__c</fullName>
    <label>Text Description of Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>