force-app/main/default/objects/PS_Input_Attr_Value_Desc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Attribute__c</columns>
    <columns>Value__c</columns>
    <columns>Text_Description_of_Attribute_Value__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>